--- a/index.html
+++ b/index.html
@@ -52,7 +52,30 @@
    <hr>
 
    <h2>@nav</h2>
+   <nav>
+   <div>I am Brand</div>
+   <ul>
+   <li>
+    <a href="/">Home</a>
+   </li>
+   <li>
+    <a href="/">Projects</a>
+   </li>
+   <li>
+    <a href="/">About</a>
+   </li>
+   </ul>
+   </nav>
+   <hr>
+   <h2>header</h2>
+   <header>
+    <img src="images/thinking.svg" alt="undraw.com">
+<!-- //choose color from tailwindcss.com -->
+   <h1>heading inside hero</h1>
+   </header>
+
    
+
 
 </body>
 </html>
