sections and footer

--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
 <!-- //choose color from tailwindcss.com -->
    <h1>heading inside hero</h1>
    </header>
+<hr>
+<h2>@Sections</h2>
+<section>
+<h3>white section</h3>
+<p>This will have a white background</p>
+</section>
+
+    <section>
+    <h3>off white section</h3>
+    <p>This will have a gray background</p>
+    </section>
+
+    <hr>
+
+    <footer>
+        <div>Some small heading inside footer</div>
+        <ul>
+            <li>Socialone</li>
+            <li>Socialtwo</li>
+            <li>Socialthree</li>
+        </ul>
+    </footer>
+
+
+
 
    
 
