--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <h1>Aditya's' Componenet Library</h1>
@@ -15,6 +16,10 @@
     <h2>This is the 2nd biggest</h2>
     <p>Let me show you the normal text This is free flowing and will wrap in the end like a paragraph</p>
     <small>This is relatively smaller text</small>
+    <p>
+        <strong>This is a bold text</strong>
+    </p>
+    
     <hr>
 
     <h2>@container</h2>
