--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <h2>@container</h2>
     <h3>fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+    <div class="container-fluid container">This is a fluid container and it will go till the end of the page</div>
     <h3>centered container</h3>
-    <div>This is a centered container and it will go till the specified width</div>
+    <div class="container-center container">This is a centered container and it will go till the specified width</div>
     <h2>@links</h2>
     <hr>
 
