--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
     <div class="container-fluid container">This is a fluid container and it will go till the end of the page</div>
     <h3>centered container</h3>
     <div class="container-center container">This is a centered container and it will go till the specified width</div>
-    <h2>@links</h2>
     <hr>
-
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    
+    <h2>@links</h2>
+    
+    <a class="link primarylink" href="/">Primary Link</a>
+    <a class="link secondarylink" href="/">Secondary Link</a>
     <hr>
 
     <h2>@Lists</h2>
