--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    <div class="nav-brand">I am Brand</div>
    <ul class="list-non-bullet nav-pills">
    <li class="list-item-inline">
-    <a class="link" href="/">Home</a>
+    <a class="link link-active" href="/">Home</a>
    </li>
    <li class="list-item-inline">
     <a class="link" href="/">Projects</a>
@@ -76,7 +76,7 @@
    <h2>header</h2>
    <header>
     <img src="images/thinking.svg" alt="undraw.com">
-<!-- //choose color from tailwindcss.com -->
+<!-- //choose color from tailwindcss.com --> 
    <h1>heading inside hero</h1>
    </header>
 <hr>
