--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
    </nav>
    <hr>
    <h2>header</h2>
-   <header>
-    <img src="images/thinking.svg" alt="undraw.com">
+   <header class="hero">
+    <img class="hero-img" src="images/thinking.svg" alt="undraw.com">
 <!-- //choose color from tailwindcss.com --> 
-   <h1>heading inside hero</h1>
+   <h1 class="hero-heading">heading inside hero <span class="heading-inverterd">the web developer</span></h1>
    </header>
 <hr>
 <h2>@Sections</h2>
