--- a/index.html
+++ b/index.html
@@ -81,14 +81,20 @@
    </header>
 <hr>
 <h2>@Sections</h2>
-<section>
-<h3>white section</h3>
-<p>This will have a white background</p>
+<section class="section">
+    <div class="container container-center" >
+        <h3>white section</h3>
+        <p>This will have a white background</p>
+    </div>
+
 </section>
 
-    <section>
-    <h3>off white section</h3>
-    <p>This will have a gray background</p>
+    <section class="ow">
+        <div class="container container-center">
+             <h3>off white section</h3>
+             <p>This will have a gray background</p>
+        </div>
+   
     </section>
 
     <hr>
