--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,16 @@
                 </div>
             </li>
 
+            <li>
+                <div class="container container-center margin-md">
+                    <h1>Banana Translator App</h1>
+                <small>2 Sep, 2023</small>
+                <p>brief explain</p>
+                <a class="link primarylink" href="https://lngminion.netlify.app/">Live Project</a>
+                <a class="link secondarylink" href="https://github.com/aditprq/neog-banana-speak">View Source</a>
+                </div>
+            </li>
+
            </ul class="list-non-bullet">
 </body>
 </html>
