--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             
 
             <li>
-                <div class="container container-center">
+                <div class="container container-center margin-md">
                     <h1>are u a marvel fan</h1>
                 <small>date</small>
                 <p>brief explain</p>
@@ -53,7 +53,7 @@
 
             <li>
                 <div class="container container-center margin-md">
-                    <h1>Banana Translator App</h1>
+                <h1>Banana Translator App</h1>
                 <small>2 Sep, 2023</small>
                 <p>brief explain</p>
                 <a class="link primarylink" href="https://lngminion.netlify.app/">Live Project</a>
