--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
            <h1 class="hero-heading">see <span class="heading-inverterd">my code</span></h1>
            </header>
 
-           <ul class="list list-non-bullet">
+           <ul class="list list-non-bullet container-center">
             
 
             <li>
