--- a/blogs.html
+++ b/blogs.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">I am Brand</div>
+        <div class="nav-brand">Aditya Prakash</div>
         <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
-         <a class="link" href="/">Home</a>
+         <a class="link link-active" href="/">Home</a>
         </li>
         <li class="list-item-inline">
          <a class="link" href="projects.html">Projects</a>
         </li>
         <li class="list-item-inline"> 
-         <a class="link link-active" href="blogs.html">blogs</a>
+         <a class="link" href="blogs.html">Blogs</a>
         </li>
         </ul>
         </nav>
