--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <nav class="navigation container">
-        <div class="nav-brand">I am Brand</div>
+        <div class="nav-brand">Aditya Prakash</div>
         <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
          <a class="link link-active" href="/">Home</a>
@@ -18,27 +18,27 @@
          <a class="link" href="projects.html">Projects</a>
         </li>
         <li class="list-item-inline"> 
-         <a class="link" href="blogs.html">blogs</a>
+         <a class="link" href="blogs.html">Blogs</a>
         </li>
         </ul>
         </nav>
 
         <header class="hero">
-            <img class="hero-img" src="images/thinking.svg" alt="undraw.com">
+            <img class="hero-img" src="images/main.svg" alt="image">
         <!-- //choose color from tailwindcss.com --> 
-           <h1 class="hero-heading">heading inside hero <span class="heading-inverterd">the web developer</span></h1>
+           <h1 class="hero-heading">"adityaprakash" <span class="heading-inverterd">the web developer</span></h1>
            </header>
 
            <section class="ow">
             <div class="container container-center">
-                 <h3>technologies</h3>
+                 <h3>#Skills</h3>
                  <p>what i know</p>
             </div>
        
         </section>
         <section class="section">
             <div class="container container-center">
-                 <h3>projects</h3>
+                 <h3>#Projects</h3>
                  <p>what i've made</p>
                  <a class="link primarylink" href="/">see projects</a>
             </div>
@@ -47,7 +47,7 @@
 
         <section class="ow">
             <div class="container container-center">
-                 <h3>blogs</h3>
+                 <h3>#Blogs</h3>
                  <p>what i know</p>
                  <a class="link secondarylink" href="/">read blogs</a>
             </div>
@@ -55,7 +55,7 @@
         </section>
 
         <footer class="footer">
-            <div class="footer-heading">Some small heading inside footer</div>
+            <div class="footer-heading">Connect with me </div>
             <ul class="social-links list-non-bullet">
                 <li class="list-item-inline"><a class="link" href="/">Socialone</a></li>
                 <li class="list-item-inline"><a class="link" href="/">Socialtwo</a></li>
