--- a/projects.html
+++ b/projects.html
@@ -8,25 +8,24 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">I am Brand</div>
+        <div class="nav-brand">Aditya Prakash</div>
         <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
-         <a class="link " href="/">Home</a>
+         <a class="link link-active" href="/">Home</a>
         </li>
         <li class="list-item-inline">
-         <a class="link link-active" href="projects.html">Projects</a>
+         <a class="link" href="projects.html">Projects</a>
         </li>
         <li class="list-item-inline"> 
-         <a class="link" href="blogs.html">blogs</a>
+         <a class="link" href="blogs.html">Blogs</a>
         </li>
         </ul>
         </nav>
 
         <header class="hero">
-            <img class="hero-img" src="images/thinking.svg" alt="undraw.com">
-        <!-- //choose color from tailwindcss.com --> 
+            <img class="pr-img" src="images/thinking.svg" alt="undraw.com">
            <h1 class="hero-heading">see <span class="heading-inverterd">my code</span></h1>
-           </header>
+        </header>
 
            <ul class="list list-non-bullet container-center">
             
