--- a/projects.html
+++ b/projects.html
@@ -32,11 +32,11 @@
 
             <li>
                 <div class="container container-center margin-md">
-                    <h1>are u a marvel fan</h1>
-                <small>date</small>
-                <p>brief explain</p>
-                <a class="link primarylink" href="repl.it/s">Live project</a>
-                <a class="link secondarylink" href="github">view source</a>
+                    <h1>Are you a MARVEL fan?</h1>
+                <small>4 Sep, 2022</small>
+                <p>This is a program that will ask some questions about marvel universe, check if you get them all right!</p>
+                <a class="link primarylink" href="https://replit.com/@aditprq/marvel-quiz?v=1">Live Project</a>
+                <a class="link secondarylink" href="github">View Source</a>
                 </div>
             </li>
 
