--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                     <h1>Are you a MARVEL fan?</h1>
                 <small>4 Sep, 2022</small>
                 <p>This is a program that will ask some questions about marvel universe, check if you get them all right!</p>
-                <a class="link primarylink" href="https://replit.com/@aditprq/marvel-quiz?v=1">Live Project</a>
+                <a class="link primarylink" href="https://replit.com/@aditprq/marvel-quiz">Live Project</a>
                 <a class="link secondarylink" href="github">View Source</a>
                 </div>
             </li>
