--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container container-center">
                  <h3>#Projects</h3>
                  <p>what i've made</p>
-                 <a class="link primarylink" href="/">see projects</a>
+                 <a class="link primarylink" href="projects.html">See Projects</a>
             </div>
        
         </section>
