--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
                 <small>4 Sep, 2022</small>
                 <p>This is a program that will ask some questions about marvel universe, check if you get them all right!</p>
                 <a class="link primarylink" href="https://replit.com/@aditprq/marvel-quiz">Live Project</a>
-                <a class="link secondarylink" href="github">View Source</a>
+                <a class="link secondarylink" href="https://replit.com/@aditprq/marvel-quiz#index.js">View Source</a>
                 </div>
             </li>
 
