--- a/blogs.html
+++ b/blogs.html
@@ -26,5 +26,14 @@
        <h1 class="hero-heading">My<span class="heading-inverterd">blogs</span></h1>
        <h2>mark5 assignment</h2>
        </header>
+
+       <footer class="footer">
+        <div class="footer-heading">Connect with me </div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="/">Socialone</a></li>
+            <li class="list-item-inline"><a class="link" href="/">Socialtwo</a></li>
+            <li class="list-item-inline"><a class="link" href="/">Socialthree</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
