--- a/projects.html
+++ b/projects.html
@@ -61,5 +61,14 @@
             </li>
 
            </ul class="list-non-bullet">
+
+           <footer class="footer">
+            <div class="footer-heading">Connect with me </div>
+            <ul class="social-links list-non-bullet">
+                <li class="list-item-inline"><a class="link" href="/">Socialone</a></li>
+                <li class="list-item-inline"><a class="link" href="/">Socialtwo</a></li>
+                <li class="list-item-inline"><a class="link" href="/">Socialthree</a></li>
+            </ul>
+        </footer>
 </body>
 </html>
