--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             
 
             <li>
-                <div class="container container-center margin-md">
+                <div class="container container-center margin-md ow">
                     <h1>Are you a MARVEL fan?</h1>
                 <small>4 Sep, 2022</small>
                 <p>This is a program that will ask some questions about marvel universe, check if you get them all right!</p>
@@ -41,7 +41,7 @@
             </li>
 
             <li>
-                <div class="container container-center margin-md">
+                <div class="container container-center margin-md ow">
                     <h1>how well do you know me</h1>
                 <small>date</small>
                 <p>brief explain</p>
@@ -51,7 +51,7 @@
             </li>
 
             <li>
-                <div class="container container-center margin-md">
+                <div class="container container-center margin-md ow">
                 <h1>Banana Translator App</h1>
                 <small>2 Sep, 2023</small>
                 <p>brief explain</p>
