--- a/blogs.html
+++ b/blogs.html
@@ -30,9 +30,9 @@
        <footer class="footer">
         <div class="footer-heading">Connect with me </div>
         <ul class="social-links list-non-bullet">
-            <li class="list-item-inline"><a class="link" href="/">Socialone</a></li>
-            <li class="list-item-inline"><a class="link" href="/">Socialtwo</a></li>
-            <li class="list-item-inline"><a class="link" href="/">Socialthree</a></li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/aditpr0">Twitter</a></li>
+            <li class="list-item-inline"><a class="link" href="https://github.com/aditprq">GitHub</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/aditprq/">LinkedIn</a></li>
         </ul>
     </footer>
 </body>
