--- a/index.html
+++ b/index.html
@@ -32,7 +32,36 @@
            <section class="ow">
             <div class="container container-center">
                  <h3>#Skills</h3>
-                 <p>what i know</p>
+                 <div class="skills">
+
+                    <div class="skill">
+                        <img src="images/html.png" alt="skill">
+                    </div>
+
+                    <div class="skill">
+                        <img src="images/css.png" alt="skill">
+                    </div>
+
+                    <div class="skill">
+                        <img src="images/js.png" alt="skill">
+                    </div>
+
+                    <div class="skill">
+                        <img src="images/nodejs.png" alt="skill">
+                    </div>
+
+                    <div class="skill">
+                        <img src="images/reactjs.png" alt="skill">
+                    </div>
+
+                    <div class="skill">
+                        <img src="images/git.png" alt="skill">
+                    </div>
+                    <div class="skill">
+                        <img src="images/github.png" alt="skill">
+                    </div>
+                 </div>
+
             </div>
        
         </section>
