--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
         <header class="hero">
             <img class="hero-img" src="images/main.svg" alt="image">
-        <!-- //choose color from tailwindcss.com --> 
            <h1 class="hero-heading">"adityaprakash" <span class="heading-inverterd">the web developer</span></h1>
            </header>
 
            <section class="ow">
             <div class="container container-center">
                  <h3>#Skills</h3>
+                 <p>I know HTML5, CSS3, JavaScript, Node JS, React JS, Git & GitHub, Web Hosting.</p>
                  <div class="skills">
 
                     <div class="skill">
@@ -56,9 +56,6 @@
 
                     <div class="skill">
                         <img src="images/git.png" alt="skill">
-                    </div>
-                    <div class="skill">
-                        <img src="images/github.png" alt="skill">
                     </div>
                  </div>
 
